--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 ﻿PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/heychat
+MONGO_URI=mongodb+srv://dhruv:dhruv@cluster0.p67jjad.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=devsecret-change-me
 CLIENT_ORIGIN=http://localhost:5173
