--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,18 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
