--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "morgan": "^1.10.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
